mobile-menu z-index fix, socials flexed, scroll fix

--- a/css/main.css
+++ b/css/main.css
@@ -518,6 +518,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 999;
   -webkit-transform: translate(-100%);
           transform: translate(-100%);
   -webkit-transition: -webkit-transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -533,7 +534,8 @@ img {
 .mobile-menu__container {
   position: relative;
   padding: 48px 40px;
-  min-height: 768px;
+  height: 100%;
+  overflow: scroll;
 }
 .mobile-menu__close {
   position: absolute;
@@ -546,7 +548,7 @@ img {
   color: #2196f3;
 }
 .mobile-menu__link {
-  display: inline-block;
+  display: block;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -593,8 +595,13 @@ img {
   line-height: 1.22;
   letter-spacing: 0.02em;
 }
+.mobile-menu__social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 .mobile-menu__particle {
-  display: inline-block;
+  display: block;
   color: rgba(33, 33, 33, 0.2);
 }
 
